<resources>
    <string name="app_name">CBS - Ticket Validator</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">CBS - Ticket Validator - Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ticket_validator_for_operators">Ticket Validator For Operators</string>
    <string name="cbs_ticket_validator_login">CBS - Ticket Validator - Login</string>
    <string name="ticketIsAllowed">The customer is allowed to enter.</string>
    <string name="ticketIsNotAllowed">The customer is not allowed to enter</string>
    <string name="about">About</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="view_entry_attempts">View entry attempts</string>
    <string name="scan_a_ticket">Scan a ticket</string>
    <string name="other">Other</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="cbs_ticket_validator_info">CBS - Ticket Validator - Info</string>
</resources>
